profile-button z-index fix

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -8,7 +8,7 @@
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 10000;
+  z-index: 999;
   backdrop-filter: blur(0);
   -webkit-backdrop-filter: blur(30px);
 }
